array.island.Island.scala.error
Compilation error:
Island:7: error: '=' expected but ';' found.
  c=List(num)
^